--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,17 +4,25 @@
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
-    
     {
-      "name": ".NET Core Launch (console)",
+      "name": ".NET Core Launch (web)",
       "type": "coreclr",
       "request": "launch",
       "preLaunchTask": "build",
       "program": "${workspaceFolder}/PizzaBox.Client/bin/Debug/netcoreapp2.2/PizzaBox.Client.dll",
       "args": [],
       "cwd": "${workspaceFolder}/PizzaBox.Client",
-      "console": "internalConsole",
-      "stopAtEntry": false
+      "stopAtEntry": false,
+      "serverReadyAction": {
+        "action": "openExternally",
+        "pattern": "^\\s*Now listening on:\\s+(https?://\\S+)"
+      },
+      "env": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "sourceFileMap": {
+        "/Views": "${workspaceFolder}/Views"
+      }
     },
     {
       "name": ".NET Core Attach",
